# bulletproofs

./: Cargo.toml
src/: inner_product_proof.rs  lib.rs  util.rs
src/r1cs/: prover.rs
src/range_proof/: messages.rs  mod.rs  party.rs
tests/: r1cs.rs  range_proof.rs
