[package]
name = "bulletproofs"
# Before doing a release:
# - update version field 
# - update html_root_url
# - update CHANGELOG
version = "4.0.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Aphoh/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
curve25519-dalek = { version = "3.2.1", default-features = false, features = ["nightly", "alloc"] }
subtle = { package = "subtle", version = "2.4", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
digest = { version = "0.9.0", default-features = false }
rand_core = { version = "0.5", default-features = false }
rand = { version = "0.7", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true }
serde_derive = { version = "1", default-features = false, optional = true }
thiserror = { version = "1", optional = true }
zeroize = { version = "1.3", default-features = false }
merlin = { git = "https://github.com/dalek-cryptography/merlin", version = "2", default-features = false }

[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.2"

[features]
default = ["std", "avx2_backend"]
alloc = ["zeroize/alloc"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
yoloproofs = []
std = ["serde", "serde_derive", "rand", "rand/std", "rand_core/std", "thiserror", "curve25519-dalek/std"]
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/alloc", "subtle/nightly"]
docs = ["nightly"]


[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "range_proof"
harness = false
required-features = ["avx2_backend"]

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false
required-features = ["yoloproofs", "avx2_backend"]
